[project]
name = "iOSbackup"
version = "0.9.925"
description = "Reads and extracts files from password-encrypted iOS backups"
readme = "README.md"
authors = [{ name = "Avi Alkalay", email = "avibrazil@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: iOS",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
]
requires-python = ">=3.7"
dependencies = ["NSKeyedUnArchiver", "pycryptodome"]

[project.urls]
Homepage = "https://github.com/avibrazil/iOSbackup"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
